[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rayon = "1.5.1"
serde = "1.0.126"
serde_derive = "1.0.126"
tokio = { version = "1.8.2", features = ["full"] }

clap = "2.33.3"
serde_json = "1.0.64"

[[bin]]
name = "render"
