[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rayon = "1.5.1"
serde = "1.0.126"
serde_derive = "1.0.126"

[dev-dependencies]
clap = { version = "2.33.3" }
serde_json = { version = "1.0.64" }
sdl2 = { version = "0.34.5", features = ["image", "ttf"] }
tokio = { version = "1.10.0", features = ["full"] }

[[example]]
name = "render"

[[example]]
name = "renderlive"
